# forge

./: CLAUDE.md  Cargo.toml  FORGE-BUILD-PROMPT.md  PROMPT.md  README.md  forge.bat  install.ps1  install.sh
.github/workflows/: release.yml
docs/: MANUAL_TEST_PLAN.md  troubleshooting.md
docs/plans/: 2026-03-02-ftai-implementation-plan.md  2026-03-02-ftai-terminal-harness-design.md  2026-03-27-forge-architecture.md  2026-03-27-tool-calling-subsystem-design.md  2026-03-31-agent-loop-anatomy.md  2026-03-31-architecture-amendments.md  2026-03-31-claude-code-lessons-learned.md  2026-04-01-forge-mesh-and-hackathon-upgrades.md
docs/research/: plugin-catalog-research.md
skills/: commit.md  debug.md  refactor.md  review.md  security.md  test.md
src/: lib.rs  main.rs  setup.rs  update.rs
src/backend/: api_client.rs  http_client.rs  llamacpp.rs  manager.rs  mlx.rs  mod.rs  probe.rs  types.rs
src/config/: loader.rs  mod.rs  templates.rs
src/conversation/: adapter.rs  compactor.rs  engine.rs  facts.rs  mod.rs  parser.rs  prompt.rs  recovery.rs  security_tests.rs  streaming.rs  validator.rs
src/dream/: scheduler.rs
src/evolution/: analyzer.rs  generator.rs  mod.rs  store.rs
src/formatting/: loader.rs  mod.rs
src/hooks/: mod.rs
src/inference/: context.rs  download.rs  knowledge_sampler.rs  mod.rs  security_tests.rs
src/mesh/: client.rs
src/permissions/: classifier.rs  denial_tracker.rs  grants.rs  mod.rs  path_validator.rs  patterns.rs  sensitive_filter.rs
src/plugins/: builtins.rs  hooks.rs  manager.rs  manifest.rs  mod.rs  registry.rs  skill_loader.rs  tool_bridge.rs
src/rules/: builtins.rs  evaluator.rs  lexer.rs  mod.rs  parser.rs
src/search/: mod.rs  security_tests.rs  store.rs
src/session/: budget.rs  manager.rs  memory.rs  mod.rs  security_tests.rs
src/skills/: builtin.rs  loader.rs  mod.rs
src/tools/: agent_spawn.rs  ask_user.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  glob_tool.rs  memory_tool.rs  mod.rs  registry.rs  request_permissions.rs  result_storage.rs  validator.rs
src/tui/: app.rs  autocomplete.rs  input.rs  mod.rs  modal.rs  plugin_modal.rs  render.rs  skill_modal.rs  (+1 more)
tests/: integration.rs
training-data/: README.md  distill-prompts.toml  source-map.toml  train.jsonl  val.jsonl
(+291 files in other folders)
