[package]
name = "ftai"
version = "0.1.0"
edition = "2021"
description = "FolkTech AI terminal coding harness"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI (placeholder — will wire up in Phase 6)
ratatui = "0.29"
crossterm = "0.28"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# Code tools
regex = "1"
glob = "0.3"
git2 = "0.19"

# Rendering
syntect = "5"
pulldown-cmark = "0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Async streams
futures-util = "0.3"

# Misc
dirs = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
