[package]
name = "forge"
version = "1.1.1"
edition = "2021"
description = "FolkTech AI terminal coding harness"
license = "MIT"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI (placeholder — will wire up in Phase 6)
ratatui = "0.29"
crossterm = "0.28"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Code tools
regex = "1"
glob = "0.3"

# Rendering
syntect = "5"
pulldown-cmark = "0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Async streams
futures-util = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File watching
notify = "7"
ignore = "0.4"

# Embeddings (search/indexing)
fastembed = "4"

# System / resource limits (Unix)
libc = "0.2"

# Self-update from GitHub Releases
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }

# Misc
dirs = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["evolution", "search"]
llama-cpp = []
evolution = []
search = []

[dev-dependencies]
tempfile = "3"
